--- a/Biblio.bib
+++ b/Biblio.bib
@@ -161,6 +161,32 @@ year = {2018}
 % Fracture --------------------------------------------
 %------------------------------------------------------
 
+@article{Wang2017,
+title = "A unified variational eigen-erosion framework for interacting brittle fractures and compaction bands in fluid-infiltrating porous media",
+journal = "Computer Methods in Applied Mechanics and Engineering",
+volume = "318",
+pages = "1 - 32",
+year = "2017",
+issn = "0045-7825",
+doi = "https://doi.org/10.1016/j.cma.2017.01.017",
+url = "http://www.sciencedirect.com/science/article/pii/S0045782516311537",
+author = "Kun Wang and WaiChing Sun",
+keywords = "Compaction band, Eigen-erosion, Porous media, Hydraulic fracture, Anti-crack, Hydraulic aperture",
+}
+
+@article{Ruiz2019,
+title = "Dynamic mixed-mode fracture in SCC reinforced with steel fibers: an experimental study",
+journal = "International Journal of Impact Engineering",
+volume = "129",
+pages = "101 - 111",
+year = "2019",
+issn = "0734-743X",
+doi = "https://doi.org/10.1016/j.ijimpeng.2019.03.003",
+url = "http://www.sciencedirect.com/science/article/pii/S0734743X18309977",
+author = "G. Ruiz and A. [de la Rosa] and L.C. Almeida and E. Poveda and X.X. Zhang and M. Tarifa and Z.M. Wu and R.C. Yu",
+}
+
+
 @article{Zhang_EE_2020,
 author = {Zhang, Kun and Shen, Shui-Long and Zhou, Annan},
 title = {Dynamic brittle fracture with eigenerosion enhanced material point method},
